# ddd_bottom_up_tutorial

./: .env  Cargo.toml  README.md  compose.yaml  reset_db.sh  test.http
.devcontainer/: devcontainer.json
.docker/: Dockerfile
migrations/: 20240520165945_create_users_table.sql
src/api_server/: Cargo.toml
src/api_server/src/: domain.rs  lib.rs  main.rs  repository.rs  use_case.rs
src/api_server/src/controller/: user_controller.rs
src/api_server/src/controller/user_controller/: register.rs  update.rs
src/api_server/src/domain/: factory.rs  value_object.rs
src/api_server/src/domain/entity/: user.rs
src/api_server/src/domain/factory/: user_factory.rs
src/api_server/src/domain/factory/user_factory/: default_user_factory.rs
src/api_server/src/domain/service/: user_service.rs
src/api_server/src/domain/value_object/: mail_address.rs  user_id.rs  user_name.rs
src/api_server/src/error/: app_error.rs
src/api_server/src/repository/: transaction.rs  user_repository.rs
src/api_server/src/repository/error/: database_error.rs
src/api_server/src/repository/transaction/: pg_transaction.rs
src/api_server/src/repository/user_repository/: pg_user_repository.rs  user_dto.rs
src/api_server/src/use_case/: user_application_usecase.rs
src/api_server/src/use_case/user_application_usecase/: user_delete_usecase.rs  user_get_usecase.rs  user_register_usecase.rs  user_update_usecase.rs
src/chapter_6/: Cargo.toml
src/chapter_6/src/: domain.rs  dto.rs  lib.rs  repository.rs  use_case.rs
src/chapter_6/src/domain/: factory.rs  service.rs  value_object.rs
src/chapter_6/src/domain/entity/: user.rs
src/chapter_6/src/dto/: user_dto.rs
src/chapter_6/src/repository/: user_repository.rs
src/sqlx_macros/: Cargo.toml
src/sqlx_macros/src/: lib.rs
(+9 files in other folders)
