[workspace]
members = ["src/*"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
thiserror = "1.0.61"
rstest = "0.22.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "migrate",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
actix-web = "4.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["env", "derive"] }
env_logger = "0.11.5"

sqlx_macros = { path = "src/sqlx_macros" }

[workspace.lints.clippy]
enum_variant_names = "allow"
